--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -19,4 +19,24 @@ html(lang='ru')
         .wrapper-content
           block content
         include ../includes/footer
+    .modal-menu__wrapper.close(id='header__info-burger') 
+      .modal-menu__block(id='burger__menu-list') 
+        button.modal-menu__close(type="button" id='burger__menu-close') 
+          img(src="../assets/img/close.svg")
+        .modal-menu__section
+          .modal-menu__item
+            a.modal-menu__link(href="#") Услуги
+            a.modal-menu__link(href="/prices.html") Цены
+            a.modal-menu__link(href="/about.html") О нас
+            a.modal-menu__link(href="/contacts.html") Контакты
+          .modal-menu__item.networks
+            a.modal-menu__netw(href="#") 
+                img(src="../assets/img/vk.svg")
+            a.modal-menus__nwt(href="#") 
+                img(src="../assets/img/inst.svg")
+          .modal-menu__item.modal-menu__sheldule
+            p Пн-Сб с 10:00 до 20:00
+            p Вс с 10:00 до 19:00
+          .modal-menu__item
+            button(type="submit").modal-menu__btn Запись   
     block script
