--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,3 +2,38 @@
  * Fonts
 */
 
+@font-face{
+    font-family: PlayfairDisplay;
+    src: url('../assets/fonts/PlayfairDisplay.ttf');
+    font-weight: 300;
+}
+@font-face{
+  font-family: PlayfairDisplay;
+  src: url('../assets/fonts/PlayfairDisplay-Regular.ttf');
+  font-weight: 400;
+}
+@font-face{
+  font-family: PlayfairDisplay;
+  src: url('../assets/fonts/PlayfairDisplay-Medium.ttf');
+  font-weight: 500;
+}
+@font-face{
+  font-family: PlayfairDisplay;
+  src: url('../assets/fonts/PlayfairDisplay-SemiBold.ttf');
+  font-weight: 600;
+}
+@font-face{
+  font-family: PlayfairDisplay;
+  src: url('../assets/fonts/PlayfairDisplay-Bold.ttf');
+  font-weight: 700;
+}
+@font-face{
+  font-family: PlayfairDisplay;
+  src: url('../assets/fonts/PlayfairDisplay-ExtraBold.ttf');
+  font-weight: 800;
+}
+@font-face{
+  font-family: PlayfairDisplay;
+  src: url('../assets/fonts/PlayfairDisplay-Black.ttf');
+  font-weight: 900;
+}
