catalogs and detail page

--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -11,7 +11,7 @@ header(id='up')
                     p Пн-Сб с 10:00 до 20:00
                     p Вс с 10:00 до 19:00
             .header-section.menu-section 
-                a.header-section__link(href="#") Услуги
+                a.header-section__link(href="/services-section.html") Услуги
                 a.header-section__link(href="/prices.html") Цены
                 a.header-section__link(href="/about.html") О нас
                 a.header-section__link(href="/contacts.html") Контакты
