--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -25,7 +25,7 @@ html(lang='ru')
           img(src="../assets/img/close.svg")
         .modal-menu__section
           .modal-menu__item
-            a.modal-menu__link(href="#") Услуги
+            a.modal-menu__link(href="/services-section.html") Услуги
             a.modal-menu__link(href="/prices.html") Цены
             a.modal-menu__link(href="/about.html") О нас
             a.modal-menu__link(href="/contacts.html") Контакты
