--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -52,44 +52,44 @@ block content
   
   section
     .container 
-      .services-wrapper 
-        .services-left
-          .services-left__list 
-            .services-left__item.item_1.border-radius
-              .services-left__item-img 
+      .main-services-wrapper 
+        .main-services-left
+          .main-services-left__list 
+            .main-services-left__item.item_1.border-radius
+              .main-services-left__item-img 
                 img(src="./assets/img/women.png", alt="")
-              .services-left__item-title Уход за волосами
-              .services-left__item-desc 
+              .main-services-left__item-title Уход за волосами
+              .main-services-left__item-desc 
                 p Курс SPA-ухода включающий в себя множество процедур
-            .services-left__item.item_2.border-radius
-              .services-left__item-img 
+            .main-services-left__item.item_2.border-radius
+              .main-services-left__item-img 
                 img(src="./assets/img/relax.png", alt="")
-              .services-left__item-title Уход за волосами
-              .services-left__item-desc 
+              .main-services-left__item-title Уход за волосами
+              .main-services-left__item-desc 
                 p Курс SPA-ухода включающий в себя множество процедур
-            .services-left__item.item_3.border-radius
-              .services-left__item-img 
+            .main-services-left__item.item_3.border-radius
+              .main-services-left__item-img 
                 img(src="./assets/img/spa.png", alt="")
-              .services-left__item-title Уход за волосами
-              .services-left__item-desc 
+              .main-services-left__item-title Уход за волосами
+              .main-services-left__item-desc 
                 p Курс SPA-ухода включающий в себя множество процедур
-            .services-left__item.item_4.border-radius
-              .services-left__item-img 
+            .main-services-left__item.item_4.border-radius
+              .main-services-left__item-img 
                 img(src="./assets/img/manicure.png", alt="")
-              .services-left__item-title Уход за волосами
-              .services-left__item-desc 
+              .main-services-left__item-title Уход за волосами
+              .main-services-left__item-desc 
                 p Курс SPA-ухода включающий в себя множество процедур
 
-        .services-right 
-          .services-right__content 
-            .services-right__content-title.title Лучшие услуги для тебя
-            .services-right__content-desc 
+        .main-services-right 
+          .main-services-right__content 
+            .main-services-right__content-title.title Лучшие услуги для тебя
+            .main-services-right__content-desc 
               p
                 | Дорогие мои, это «Меню» для Вас составлялось нашими специалистами тщатель-
                 | нейшим образом. Подбирая косметику и составляя процедуры, мы старались
                 | учитывать все составляющие: Ваш тип кожи, Ваш возраст и конечный результат от процедуры.
                 |Косметика, которую мы выбрали для Вас, произведена на основе геля из водорослей (бурых водорослей Ламинарии японика, Фукуса пузырчатого и сине-зеленой)
-            a(href="#").services-right__content-btn.btn Ещё больше услуг
+            a(href="#").main-services-right__content-btn.btn Ещё больше услуг
   
   section 
     .masters
@@ -258,7 +258,7 @@ block content
                     a(href="tel:+79265382856")  8 (926) 538-28-56
           .main-contacts__right 
             .main-contacts__right-map 
-              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae4b3e9cd6479fb6d992faac12460f17b805b5e050ade97094019fa6b3c212956&amp;width=763&amp;height=458&amp;lang=ru_RU&amp;scroll=true"></script>
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/main-services/constructor/1.0/js/?um=constructor%3Ae4b3e9cd6479fb6d992faac12460f17b805b5e050ade97094019fa6b3c212956&amp;width=763&amp;height=458&amp;lang=ru_RU&amp;scroll=true"></script>
           
 
     
