--- a/src/pug/pages/prices.pug
+++ b/src/pug/pages/prices.pug
@@ -14,3 +14,73 @@ block content
             .prices-wrapper
                 .prices-header
                     h1.prices-header__title.title Цены
+                .prices-content
+                    ul.prices-content__1lv-list
+                        li.prices-content__1lv-item
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Окрашивание на американском красителе Paul Mitchell
+                                .prices-content__1lv-right 
+                                    span.prices-content__plus + 
+
+                            ul.prices-content__2lv-list.close
+                                li.prices-content__2lv-item
+                                    .prices-content__2lv-title.prices-content__item-title
+                                        a(href="#").prices-content__2lv-left Окрашивание стойким красителем The color корни
+                                        .prices-content__2lv-right 
+                                            .prices-content__2lv-price 
+                                                button(type="submit").prices-content__entry Запись
+                                            .prices-content__2lv-price 1600 ₽ 
+                                li.prices-content__2lv-item 
+                                    .prices-content__2lv-title.prices-content__item-title
+                                        a(href="#").prices-content__2lv-left Окрашивание на американском красителе Paul Mitchell
+                                        .prices-content__2lv-right 
+                                            .prices-content__2lv-price 
+                                                button(type="submit").prices-content__entry Запись
+                                            .prices-content__2lv-price 2260 ₽
+                                li.prices-content__2lv-item
+                                    .prices-content__2lv-title.prices-content__item-title
+                                        a(href="#").prices-content__2lv-left Окрашивание на американском красителе Paul Mitchell
+                                        .prices-content__2lv-right 
+                                            .prices-content__2lv-price 
+                                                button(type="submit").prices-content__entry Запись
+                                            .prices-content__2lv-price 2260 ₽
+                                    
+                
+
+                        li.prices-content__1lv-item 
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Окрашивание на американском красителе Joico
+                                .prices-content__1lv-right 
+                                    span.prices-content__plus + 
+                        li.prices-content__1lv-item 
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Биологическая завивка и буфон Paul Mitchell 
+                                .prices-content__1lv-right  
+                                    span.prices-content__plus + 
+                        li.prices-content__1lv-item 
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Модельные стрижки
+                                .prices-content__1lv-right 
+                                    span.prices-content__plus + 
+                        li.prices-content__1lv-item 
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Укладки
+                                .prices-content__1lv-right 
+                                    span.prices-content__plus + 
+                        li.prices-content__1lv-item 
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Лечение волос
+                                .prices-content__1lv-right 
+                                    span.prices-content__plus + 
+                        li.prices-content__1lv-item 
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Окрашивание японской хной Moran 
+                                .prices-content__1lv-right 
+                                    span.prices-content__plus + 
+                        li.prices-content__1lv-item 
+                            .prices-content__1lv-title.prices-content__item-title
+                                a(href="#").prices-content__1lv-left Наращивание волос
+                                .prices-content__1lv-right 
+                                    span.prices-content__plus + 
+                            
+                        
