--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -33,7 +33,11 @@
 @import 'blocks/contacts';
 @import 'blocks/prices';
 @import 'blocks/about';
-@import 'blocks/master-detail';
+@import 'blocks/master';
+@import 'blocks/services-section';
+@import 'blocks/services';
+@import 'blocks/service';
+
 /* Pages styles */
 @import 'demo';
 
